--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+config = "^0.5.1"
+configparser = "^6.0.0"
+psycopg2 = "^2.9.9"
+requests = "^2.31.0"
 
 
 [build-system]
